--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,14 @@
-.App {
-  text-align: center;
+.search-container { 
+  background-color: brown;
+  width: 100vw; 
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.search-list-container { 
+  background-color: cadetblue;
+  height: 75vh;
+  width: 80vw; 
+  position: fixed; 
+  top: 15%; 
+  left: 10%; 
 }
