--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,17 @@
   position: fixed; 
   top: 15%; 
   left: 10%; 
+  overflow: auto; 
 }
 
+.flight-detail-card {  
+  width: 100%; 
+  height: 100px;
+  float: left; 
+  display: flex; 
+}
+
+.price { 
+  font-size: 30px; 
+  float: right; 
+}
