--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 
 .sign-up-form {
   text-align: center;  
-  margin-top: 13%;    
+  margin-top: 8%;    
 }
 
 .sign-up-form input { 
@@ -29,7 +29,7 @@
   padding: 10px; 
 }
 
-.sign-up-form button { 
+.sign-up-btn { 
   height: 40px; 
   width: 80px; 
   border-radius: 12px; 
