--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
 .search-list-container { 
   background-color: cadetblue;
   height: 75vh;
-  width: 80vw; 
+  width: 23vw; 
   position: fixed; 
   top: 15%; 
   left: 10%; 
@@ -76,4 +76,26 @@
   position: fixed; 
   width: 80vw; 
   height: 40px; 
+  text-align: center;
+}
+
+
+/* Saved Search Container */
+
+.saved-search-container { 
+  background-color: honeydew;
+  width: 55vw; 
+  height: 75vh; 
+  position: fixed; 
+  top: 15%; 
+  left: 35%; 
+  z-index: 1;
+}
+
+.saved-items { 
+  width: 100%; 
+  height: 100px;
+  float: left; 
+  display: flex; 
+  z-index: 2;
 }
