--- a/src/App.css
+++ b/src/App.css
@@ -58,8 +58,8 @@
 .flight-detail-card {  
   width: 100%; 
   height: 100px;
-  float: left; 
-  display: flex; 
+  /* float: left; 
+  display: flex;  */
 }
 
 .price { 
@@ -95,7 +95,7 @@
 .saved-items { 
   width: 100%; 
   height: 100px;
-  float: left; 
+  /* float: left; 
   display: flex; 
-  z-index: 2;
+  z-index: 2; */
 }
