clouds and plane added to search page

--- a/src/App.css
+++ b/src/App.css
@@ -39,18 +39,18 @@
 
 /* SEARCH */
 .search-container { 
-  background-color: brown;
+  background-color: rgba(133, 185, 237, .8);
   width: 100vw; 
   height: 100vh;
   position: relative; 
 }
 
 .search-list-container { 
-  background-color: cadetblue;
+  background-color: #CB6318;
   height: 75vh;
   width: 23vw; 
   position: fixed; 
-  top: 15%; 
+  top: 20%; 
   left: 10%; 
   overflow: auto; 
 }
@@ -70,24 +70,81 @@
 /* Search Bar Container */
 
 .search-bar-container { 
-  background-color: gray; 
-  top: 5%; 
-  left: 10%; 
   position: fixed; 
-  width: 80vw; 
-  height: 40px; 
+  width: 100vw; 
+  height: 15vh; 
   text-align: center;
 }
 
+.search-bar-container form{ 
+  position: fixed;
+  margin-top: 30px; 
+  left: 35%; 
+}
+.sign-out { 
+float: right; 
+position: relative; 
+
+}
+
+.cloud-1 { 
+  position: fixed; 
+  width: 500px; 
+  height: 250px; 
+  left: 0%;
+  top: 60% 
+}
+
+.cloud-2 { 
+  position: fixed; 
+  width: 400px;
+  height: 300px; 
+  left: 15%; 
+}
+
+.cloud-3 { 
+  position: fixed;
+  width: 350px;
+  left: 45%;
+  top: 73%;
+}
+
+.cloud-4{ 
+  position: fixed; 
+  width: 350px;
+  left: 80%;
+  top: 50% 
+}
+
+.cloud-5 { 
+  position: fixed; 
+  left: 50%; 
+  height: 220px; 
+  top: 60px; 
+}
+
+.cloud-6 { 
+  position: fixed; 
+  width: 350px;
+  left: 25%;
+  top: 35% 
+}
+
+.plane-1 { 
+  position: fixed; 
+  height: 40%; 
+  left: 50%;
+  top: 35%;  
+}
 
 /* Saved Search Container */
 
 .saved-search-container { 
-  background-color: honeydew;
+  /* background-color: #7CAA2D; */
   width: 55vw; 
   height: 75vh; 
   position: fixed; 
-  top: 15%; 
+  top: 20%; 
   left: 35%; 
   z-index: 1;
 }
