--- a/src/App.css
+++ b/src/App.css
@@ -46,25 +46,33 @@
 }
 
 .search-list-container { 
-  background-color: #CB6318;
+  background-color: rgb(255, 148, 77, .97);
+  /* border-style: solid; 
+  border-color: black;  */
   height: 75vh;
   width: 23vw; 
   position: fixed; 
-  top: 20%; 
+  top: 15%; 
   left: 10%; 
   overflow: auto; 
+  text-align: center; 
+  border-radius: 10px; 
 }
 
 .flight-detail-card {  
-  width: 100%; 
-  height: 100px;
-  /* float: left; 
-  display: flex;  */
+  width: 100%;
+  height: 100%;
+  margin-top: 50px;
+}
+
+.flight-detail-card p{
+  margin-top: 30px; 
+
 }
 
 .price { 
   font-size: 30px; 
-  float: right; 
+  
 }
 
 /* Search Bar Container */
@@ -82,9 +90,9 @@
   left: 35%; 
 }
 .sign-out { 
-float: right; 
-position: relative; 
-
+  position: fixed; 
+  left: 80%;
+  top: 3% 
 }
 
 .cloud-1 { 
@@ -144,7 +152,7 @@ position: relative;
   width: 55vw; 
   height: 75vh; 
   position: fixed; 
-  top: 20%; 
+  top: 15%; 
   left: 35%; 
   z-index: 1;
 }
@@ -152,6 +160,12 @@ position: relative;
 .saved-items { 
   width: 100%; 
   height: 100px;
+  border-style: solid; 
+  border-color: black; 
+  border-width: thin; 
+  margin: 10px; 
+  background-color: rgb(255, 255, 255, .97); 
+  border-radius: 10px; 
   /* float: left; 
   display: flex; 
   z-index: 2; */
