--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
 }
 
 .search-list-container { 
-  background-color: rgb(255, 148, 77, .97);
+  background-color: rgb(0, 41, 102, .97);
   /* border-style: solid; 
   border-color: black;  */
   height: 75vh;
@@ -57,6 +57,7 @@
   overflow: auto; 
   text-align: center; 
   border-radius: 10px; 
+  color: white; 
 }
 
 .flight-detail-card {  
@@ -150,23 +151,61 @@
 .saved-search-container { 
   /* background-color: #7CAA2D; */
   width: 55vw; 
-  height: 75vh; 
   position: fixed; 
   top: 15%; 
   left: 35%; 
   z-index: 1;
+  background-color: rgb(255, 255, 255, .95);
+  /* display: flex; 
+  flex-direction: column;  */
 }
 
 .saved-items { 
   width: 100%; 
-  height: 100px;
-  border-style: solid; 
-  border-color: black; 
-  border-width: thin; 
-  margin: 10px; 
-  background-color: rgb(255, 255, 255, .97); 
-  border-radius: 10px; 
-  /* float: left; 
+  height: 100px; 
+  font-size: 30px; 
   display: flex; 
-  z-index: 2; */
+  flex-direction: row;
+  justify-content: space-between;
+  
+}
+
+.saved-items h4 { 
+  margin-left: 10px; 
+}
+
+.saved-date { 
+  font-size: 20px; 
+  margin-top: 48px; 
+}
+
+.saved-origin { 
+ 
+  margin-top: 38px; 
+}
+
+.saved-destination { 
+  margin-top: 36px; 
+
+}
+
+.saved-direct { 
+  margin-top: 35px; 
+
+}
+
+.saved-price { 
+  margin-top: 35px; 
+  
+}
+
+.saved-items button { 
+  border: none; 
+  background-color: transparent; 
+  outline: none; 
+  margin-right: 10px; 
+}
+
+.arrow-right { 
+  margin-top: 38px; 
 }
