--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
   position: fixed;
   height: 150px;
   width: 200px;   
-  left: 60%; 
+  left: 100%; 
   top: 10%; 
 }
 
@@ -181,7 +181,8 @@
 .search-bar-container form{  
   display: flex;  
   margin-top: 2.5%; 
-  margin-left: 40%
+  margin-left: 40%; 
+  z-index: 5; 
 }
 
 .search-label { 
@@ -240,43 +241,49 @@
   position: fixed; 
   width: 500px; 
   height: 250px; 
-  left: 0%;
-  top: 60% 
+  left: -30%;
+  top: 60%; 
+  z-index: -1
 }
 
 .cloud-2 { 
   position: fixed; 
   width: 400px;
   height: 300px; 
-  left: 15%; 
+  left: -30%; 
+  z-index: -1
 }
 
 .cloud-3 { 
   position: fixed;
   width: 350px;
-  left: 45%;
+  left: -50%;
   top: 73%;
+  z-index: -1
 }
 
 .cloud-4{ 
   position: fixed; 
   width: 350px;
-  left: 80%;
-  top: 50% 
+  left: -30%;
+  top: 50%;
+  z-index: -1
 }
 
 .cloud-5 { 
   position: fixed; 
-  left: 50%; 
+  left: -30%; 
   height: 220px; 
   top: 60px; 
+  z-index: -1
 }
 
 .cloud-6 { 
   position: fixed; 
   width: 350px;
-  left: 25%;
-  top: 35% 
+  left: -30%;
+  top: 35%;
+  z-index: -1
 }
 
 .plane-1 { 
