--- a/src/App.css
+++ b/src/App.css
@@ -241,7 +241,7 @@
   position: fixed; 
   width: 500px; 
   height: 250px; 
-  left: -30%;
+  left: -40%;
   top: 60%; 
   z-index: -1
 }
@@ -284,6 +284,49 @@
   left: -30%;
   top: 35%;
   z-index: -1
+}
+
+.cloud-7 { 
+  position: fixed; 
+  width: 500px; 
+  height: 250px; 
+  left: 0%;
+  top: 60% 
+}
+
+.cloud-8 { 
+  position: fixed; 
+  width: 400px;
+  height: 300px; 
+  left: 15%; 
+}
+
+.cloud-9 { 
+  position: fixed;
+  width: 350px;
+  left: 45%;
+  top: 73%;
+}
+
+.cloud-10{ 
+  position: fixed; 
+  width: 350px;
+  left: 80%;
+  top: 50% 
+}
+
+.cloud-11 { 
+  position: fixed; 
+  left: 50%; 
+  height: 220px; 
+  top: 60px; 
+}
+
+.cloud-12 { 
+  position: fixed; 
+  width: 350px;
+  left: 25%;
+  top: 35% 
 }
 
 .plane-1 { 
