--- a/src/App.css
+++ b/src/App.css
@@ -182,7 +182,6 @@
   display: flex;  
   margin-top: 2.5%; 
   margin-left: 40%; 
-  z-index: 5; 
 }
 
 .search-label { 
@@ -198,6 +197,10 @@
   font-size: 18px; 
   border-radius: 5px; 
   padding: 6px 7px 0px 7px; 
+}
+
+.calendar { 
+  z-index: 1000 !important
 }
 
 .submit-search-btn { 
@@ -242,8 +245,7 @@
   width: 500px; 
   height: 250px; 
   left: -40%;
-  top: 60%; 
-  z-index: -1
+  top: 60%;
 }
 
 .cloud-2 { 
@@ -251,7 +253,6 @@
   width: 400px;
   height: 300px; 
   left: -30%; 
-  z-index: -1
 }
 
 .cloud-3 { 
@@ -259,7 +260,6 @@
   width: 350px;
   left: -50%;
   top: 73%;
-  z-index: -1
 }
 
 .cloud-4{ 
@@ -267,7 +267,6 @@
   width: 350px;
   left: -30%;
   top: 50%;
-  z-index: -1
 }
 
 .cloud-5 { 
@@ -275,7 +274,6 @@
   left: -30%; 
   height: 220px; 
   top: 60px; 
-  z-index: -1
 }
 
 .cloud-6 { 
@@ -283,7 +281,6 @@
   width: 350px;
   left: -30%;
   top: 35%;
-  z-index: -1;
 }
 
 .cloud-7 { 
@@ -292,7 +289,6 @@
   height: 250px; 
   left: 0%;
   top: 60%;
-  z-index: -1; 
 }
 
 .cloud-8 { 
@@ -300,7 +296,6 @@
   width: 400px;
   height: 300px; 
   left: 15%; 
-  z-index: -1;
 }
 
 .cloud-9 { 
@@ -308,7 +303,6 @@
   width: 350px;
   left: 45%;
   top: 73%;
-  z-index: -1;
 }
 
 .cloud-10{ 
@@ -316,7 +310,6 @@
   width: 350px;
   left: 80%;
   top: 50%;
-  z-index: -1; 
 }
 
 .cloud-11 { 
@@ -324,7 +317,6 @@
   left: 50%; 
   height: 220px; 
   top: 60px; 
-  z-index: -1;
 }
 
 .cloud-12 { 
@@ -332,7 +324,6 @@
   width: 350px;
   left: 25%;
   top: 35%;
-  z-index: -1; 
 }
 
 .plane-1 { 
@@ -354,7 +345,6 @@
   position: fixed; 
   top: 15%; 
   left: 32.5%; 
-  z-index: 1;
   background-color: rgb(255, 255, 255, .95);
   border-radius: 10px; 
   /* display: flex; 
