--- a/src/App.css
+++ b/src/App.css
@@ -181,7 +181,7 @@
 .search-bar-container form{  
   display: flex;  
   margin-top: 2.5%; 
-  margin-left: 40%; 
+  margin-left: 25%; 
 }
 
 .search-label { 
@@ -347,6 +347,7 @@
   left: 32.5%; 
   background-color: rgb(255, 255, 255, .95);
   border-radius: 10px; 
+  overflow: auto;
   /* display: flex; 
   flex-direction: column;  */
 }
